api_versioned_docs/version-12.1.5/avalonia/controls/documents/primitives/actions/propertyaction-1.mdx
---
title: 'PropertyAction<T>'
hide_title: true
slug: '/avalonia/controls/documents/primitives/actions/propertyaction-1'
uid: 'Avalonia.Controls.Documents.Primitives.Actions.PropertyAction`1'
commentId: 'T:Avalonia.Controls.Documents.Primitives.Actions.PropertyAction`1'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Actions'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">PropertyAction&lt;T&gt; Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives.Actions</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Base class for property actions that get or set a typed property value.

</div>

<div className="apiref-page__signature">

```csharp
public class PropertyAction<T>
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="editoraction">EditorAction</a> <span className="apiref-page__relation-separator">-&gt;</span> PropertyAction&lt;T&gt;
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="ieditoraction">IEditorAction</a>, <a href="ipropertyaction">IPropertyAction</a>, IPropertyAction&lt;&gt;
</div>
</div>

## Remarks

Property actions are used for selection-based properties like font family,
font size, and colors. They work with combo boxes and other value selectors.

When the selection is empty, property changes are "springloaded" and applied
to the next typed character.

## Methods

| Name | Description |
| --- | --- |
| [CanExecute](#uid-0722ba283b) | Gets whether the action can currently execute. |
| [ClearValue](#uid-c88f8b7d4f) | Clears the property value for the selection, reverting affected elements to their inherited or default value. |
| [Execute](#uid-e871243fd1) | Executes the action synchronously. |
| [ExecuteAsync](editoraction.mdx#uid-6a0258eff0) | Executes the action asynchronously. Inherited from [EditorAction](editoraction.mdx). |
| [GetAvailableValues](#uid-d627a8a532) | No summary available. |
| [GetState](#uid-5dc917f748) | Gets the current state of the action. |
| [GetValue](#uid-064ea7af7c) | No summary available. |
| [SetValue](#uid-40df542e87) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-0722ba283b"></span>

### CanExecute Method

Gets whether the action can currently execute.

```csharp
public bool CanExecute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to check against.


#### Returns

bool

True if the action can execute; otherwise, false.


#### Remarks

This is called frequently to update UI state (button enabled/disabled).
Implementations should be fast and avoid heavy computation.

</section>

<section className="apiref-page__member-entry">

<span id="uid-c88f8b7d4f"></span>

### ClearValue Method

Clears the property value for the selection, reverting affected elements
to their inherited or default value.

```csharp
public void ClearValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to modify.


</section>

<section className="apiref-page__member-entry">

<span id="uid-e871243fd1"></span>

### Execute Method

Executes the action synchronously.

```csharp
public void Execute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to execute on.


#### Remarks

For actions that require async operations (like file dialogs),
use [Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d627a8a532"></span>

### GetAvailableValues Method

```csharp
public System.Collections.Generic.IEnumerable<T> GetAvailableValues()
```

#### Returns

System.Collections.Generic.IEnumerable&lt;T&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-5dc917f748"></span>

### GetState Method

Gets the current state of the action.

```csharp
public object GetState(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

object

The current state, or null if the action has no state. A toggle action returns
a boolean, a property action the current value.


#### Remarks

Read [Avalonia.Controls.Documents.Primitives.Actions.IToggleAction.IsChecked(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IToggleAction.IsChecked%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) or
[Avalonia.Controls.Documents.Primitives.Actions.IPropertyAction.GetValueAsObject(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IPropertyAction.GetValueAsObject%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead. Both say which family
the value came from, which an untyped object cannot.

</section>

<section className="apiref-page__member-entry">

<span id="uid-064ea7af7c"></span>

### GetValue Method

```csharp
public T GetValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)


#### Returns

T


</section>

<section className="apiref-page__member-entry">

<span id="uid-40df542e87"></span>

### SetValue Method

```csharp
public void SetValue(Avalonia.Controls.Documents.Primitives.ITextEditorHost host, T value)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)


`value` T


</section>

## Properties

| Name | Description |
| --- | --- |
| [DisplayName](editoraction.mdx#uid-f07298f749) | Gets the display name for UI purposes. Inherited from [EditorAction](editoraction.mdx). |
| [Gesture](editoraction.mdx#uid-557e9af400) | Gets the optional keyboard gesture for this action. Inherited from [EditorAction](editoraction.mdx). |
| [Id](editoraction.mdx#uid-80cef2dbb8) | Gets the unique identifier for this action. Inherited from [EditorAction](editoraction.mdx). |

</ApiRefPage>

